--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "engines":{
+    "node": "14.2.0",
+    "npm": "6.14.4"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
